testdata/baselines/reference/submodule/compiler/parseJsxElementInUnaryExpressionNoCrash2.errors.txt
a.js(1,3): error TS1110: Type expected.
a.js(1,4): error TS1109: Expression expected.
a.js(1,6): error TS1109: Expression expected.
a.js(1,8): error TS1109: Expression expected.
a.js(2,1): error TS1109: Expression expected.


==== a.js (5 errors) ====
    ~<></> <
      ~
!!! error TS1110: Type expected.
       ~~
!!! error TS1109: Expression expected.
         ~
!!! error TS1109: Expression expected.
           ~
!!! error TS1109: Expression expected.
    
    
!!! error TS1109: Expression expected.